# pronom-release-tools

./: .codespellrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  justfile  pronom.env  pronom_tools.py  pyproject.toml
.github/workflows/: linting.yml  release.yml  unit-tests-all.yml
docs/: index.html
docs/pronom_cron/: index.html  pronom_cron.html
docs/pronom_export/: pronom_xml_export.html
docs/pronom_stats/: index.html  pronom_stats.html
docs/pronom_summary/: pronom_summary.html
docs/pronom_tools/: index.html  pronom_tools.html  version.html
docs/src/: index.html
docs/src/pronom_cron/: index.html
docs/src/pronom_export/: index.html  pronom_xml_export.html
docs/src/pronom_stats/: index.html  pronom_stats.html
docs/src/pronom_summary/: index.html  pronom_summary.html
docs/src/pronom_tools/: pronom_tools.html  version.html
html/src/pronom_cron/: index.html  pronom_cron.html
html/src/pronom_export/: index.html  pronom_xml_export.html
html/src/pronom_stats/: pronom_stats.html
html/src/pronom_summary/: index.html  pronom_summary.html
html/src/pronom_tools/: index.html  pronom_tools.html
requirements/: local.txt  requirements.txt
src/pronom_cron/: pronom_cron.py
src/pronom_export/: .gitignore  pronom_xml_export.py
src/pronom_stats/: pronom_stats.py
src/pronom_summary/: .gitignore  pronom_summary.py
src/pronom_tools/: pronom_tools.py  version.py
tests/: test_main.py  test_summary.py
tests/fixtures/container/: container-signature-20231127.xml
